fixed example overflow

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,8 @@ body {
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+html {
+  max-height: 100vh;
+  overflow: hidden;
+}
